# spice-test

./: .gitignore  README.md  spice-test.cabal
src/basic/: Main.hs
src/jumper/: Game.hs  Jumper.hs  Main.hs  Render.hs  Update.hs
src/sprite/: Main.hs
