name:                spice-test
version:             0.5.0.0
synopsis:            A number of examples / tests for my spice framework.
homepage:            http://github.com/crockeo/spice-test
license:             MIT
license-file:        LICENSE
author:              Cerek Hillen
maintainer:          Cerek Hillen <cerekh@gmail.com>
copyright:           2014, Cerek Hillen
category:            Game
build-type:          Simple
cabal-version:       >=1.10

-- Running the application stored in src/basic/
executable basic
  main-is:             Main.hs

  hs-source-dirs:      src/basic/

  build-depends:       base         == 4.7.*
               ,       spice        == 0.5.0.0
               ,       data-default == 0.5.*

  default-language:    Haskell2010

-- Running the application stored in src/jumper/
executable jumper
  main-is:             Main.hs

  hs-source-dirs:      src/jumper/

  build-depends:       base         == 4.7.*
               ,       spice        == 0.5.0.0
               ,       data-default == 0.5.*

  default-language:    Haskell2010
